[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui/CharacterCreation.gd" type="Script" id=1]

[node name="CharacterCreation" type="Panel"]
self_modulate = Color( 0.972656, 0.292557, 0.292557, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 392.0
margin_bottom = 268.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]

[node name="UnitChoice" type="OptionButton" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_top = 26.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.85
anchor_right = 0.8
anchor_bottom = 0.96
margin_bottom = -0.159988
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="CreateUnit" type="Button" parent="Buttons"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 65.0
margin_right = 118.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create"
flat = false
align = 1

[node name="Abort" type="Button" parent="Buttons"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 122.0
margin_right = 169.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Abort"
flat = false
align = 1

[connection signal="pressed" from="Buttons/CreateUnit" to="." method="makeCharacter"]
[connection signal="pressed" from="Buttons/Abort" to="." method="queue_free" flags=6]
